force-app/main/default/objects/JBCXM__CTA__c/JBCXM__CTA__c.object-meta.xml
<CustomObject>
    <label>Call To Action</label>
    <nameField>
        <label>Call To Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call To Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>