force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__AlertReference__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AlertReference__c</fullName>
    <label>Alert Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>