force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Assignee__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignee</relationshipName>
    <type>Lookup</type>
</CustomField>