force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Category__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective Category</label>
    <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
    <relationshipLabel>Objective</relationshipLabel>
    <relationshipName>Objective</relationshipName>
    <type>Lookup</type>
</CustomField>