force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__CloseSource__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CloseSource__c</fullName>
    <label>Close source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>