force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Comments__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>