force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__CTAGroup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CTAGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTA Group</label>
    <referenceTo>JBCXM__CTAGroup__c</referenceTo>
    <relationshipLabel>CallToAction</relationshipLabel>
    <relationshipName>CallToAction</relationshipName>
    <type>Lookup</type>
</CustomField>