force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <label>Template Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>