force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Draft__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Draft</label>
    <type>Checkbox</type>
</CustomField>