force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DSRecommended__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DSRecommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GS Recommended</label>
    <type>Checkbox</type>
</CustomField>