force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DSScore__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DSScore__c</fullName>
    <label>GS Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>