force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DSScoreReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DSScoreReason__c</fullName>
    <label>GS Score Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>