force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DueDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>