force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__DynamicData__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DynamicData__c</fullName>
    <label>Dynamic data info</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>