force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__EntityType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EntityType__c</fullName>
    <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
    <label>EntityType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>