force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__FinalMilestone__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FinalMilestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Milestone</label>
    <referenceTo>JBCXM__Milestone__c</referenceTo>
    <relationshipLabel>Final Milestone</relationshipLabel>
    <relationshipName>FinalMilestone</relationshipName>
    <type>Lookup</type>
</CustomField>