force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__GSDaysToClose__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDaysToClose__c</fullName>
    <formula>IF( ISBLANK(JBCXM__ClosedDate__c) ,  TODAY() -  JBCXM__CreatedDate__c , JBCXM__ClosedDate__c - JBCXM__CreatedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>