force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__GSDueDateVariance__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSDueDateVariance__c</fullName>
    <formula>JBCXM__OriginalDueDate__c -  JBCXM__DueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>