force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__GSPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSPercentComplete__c</fullName>
    <formula>IF(  JBCXM__TaskCount__c == 0 ,  IF( JBCXM__Stage__r.JBCXM__IncludeInWidget__c , 0,1) , JBCXM__GSClosedTaskCount__c /  JBCXM__TaskCount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>