force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__IsAssignedToGroup__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsAssignedToGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAssignedToGroup</label>
    <type>Checkbox</type>
</CustomField>