force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__IsFlagged__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsFlagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagged</label>
    <type>Checkbox</type>
</CustomField>