force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__IsRecurring__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecurring</label>
    <type>Checkbox</type>
</CustomField>