force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__IsSnoozed__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsSnoozed__c</fullName>
    <formula>IF(JBCXM__SnoozedUntil__c &gt;= NOW(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snoozed</label>
    <type>Checkbox</type>
</CustomField>