force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__MileStoneEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MileStoneEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MileStoneEnabled</label>
    <type>Checkbox</type>
</CustomField>