force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Parent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call To Action ParentId</label>
    <referenceTo>JBCXM__CTA__c</referenceTo>
    <relationshipLabel>Call To Actions</relationshipLabel>
    <relationshipName>CallToActions</relationshipName>
    <type>Lookup</type>
</CustomField>