force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Playbook__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Playbook</label>
    <referenceTo>JBCXM__Playbook__c</referenceTo>
    <relationshipLabel>Call To Action</relationshipLabel>
    <relationshipName>Call_To_Action</relationshipName>
    <type>Lookup</type>
</CustomField>