force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Priority__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Priority__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Call To Actions (PickList)</relationshipLabel>
    <relationshipName>CTAPriority</relationshipName>
    <type>Lookup</type>
</CustomField>