force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Reason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Call To Actions (PickList)</relationshipLabel>
    <relationshipName>CTAReason</relationshipName>
    <type>Lookup</type>
</CustomField>