force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__RuleActionId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RuleActionId__c</fullName>
    <label>Rule Action Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>