force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__SnoozedOn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SnoozedOn__c</fullName>
    <label>Snoozed on</label>
    <type>Date</type>
</CustomField>