force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__SnoozeReason__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SnoozeReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snooze Reason</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Call To Action (Snooze Reason)</relationshipLabel>
    <relationshipName>Call_To_Action</relationshipName>
    <type>Lookup</type>
</CustomField>