force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Stage__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Call To Actions</relationshipLabel>
    <relationshipName>CTAStage</relationshipName>
    <type>Lookup</type>
</CustomField>