force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__SuccessCriteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SuccessCriteria__c</fullName>
    <label>Success Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>