force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__TaskCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>