force-app/main/default/objects/JBCXM__CTA__c/fields/JBCXM__Type__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTA Type</label>
    <referenceTo>JBCXM__CTATypes__c</referenceTo>
    <relationshipLabel>Call To Action</relationshipLabel>
    <relationshipName>CallToAction</relationshipName>
    <type>Lookup</type>
</CustomField>